--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ python:
   - "nightly"
 matrix:
   allow_failures:
-    - python: "3.3,3.4,3.5,nightly"
+    - python: "nightly"
+    - python: "3.5"
+    - python: 3.4
+    - python: 3.3
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
