--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ matrix:
   allow_failures:
     - python: "nightly"
     - python: "3.5"
-    - python: 3.4
-    - python: 3.3
+    - python: "3.4"
+    - python: "3.3"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
